analyzer/src/quack.output
Grammar

    0 $accept: pgm $end

    1 pgm: classes statements

    2 classes: classes clas
    3        | %empty

    4 statements: statements statement
    5           | %empty

    6 statement_block: '{' statements '}'

    7 clas: CLASS ident '(' formal_args ')' opt_cls_extends '{' statements methods '}'

    8 opt_cls_extends: EXTENDS ident
    9                | %empty

   10 formal_args: formal_args_delim
   11            | %empty

   12 formal_args_delim: formal_args_delim ',' formal_arg
   13                  | formal_arg

   14 formal_arg: ident ':' ident

   15 methods: methods method
   16        | %empty

   17 method: DEF ident '(' formal_args ')' opt_return_ident statement_block

   18 opt_return_ident: ':' ident
   19                 | %empty

   20 statement: IF expr statement_block opt_elif_parts
   21          | WHILE expr statement_block

   22 opt_elif_parts: ELIF expr statement_block opt_elif_parts
   23               | ELSE statement_block
   24               | %empty

   25 statement: expr ';'
   26          | l_expr '=' expr ';'
   27          | l_expr ':' ident '=' expr ';'

   28 l_expr: IDENT
   29       | expr '.' ident

   30 expr: l_expr
   31     | STRING_LIT
   32     | INT_LIT
   33     | expr '*' expr
   34     | expr '/' expr
   35     | expr '+' expr
   36     | expr '-' expr
   37     | '-' expr
   38     | '(' expr ')'
   39     | expr EQUALS expr
   40     | expr ATLEAST expr
   41     | expr ATMOST expr
   42     | expr '<' expr
   43     | expr '>' expr
   44     | expr AND expr
   45     | expr OR expr
   46     | NOT expr
   47     | expr '.' ident '(' actual_args ')'

   48 actual_args: %empty
   49            | actual_args_nonempty

   50 actual_args_nonempty: actual_args_nonempty ',' expr
   51                     | expr

   52 expr: ident '(' actual_args ')'

   53 statement: RETURN expr ';'
   54          | RETURN ';'
   55          | typecase

   56 typecase: TYPECASE expr '{' type_alt_opt '}'

   57 type_alt_opt: type_alt_opt type_alt
   58             | %empty

   59 type_alt: ident ':' ident statement_block

   60 ident: IDENT


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 7 17 38 47 52
    ')' (41) 7 17 38 47 52
    '*' (42) 33
    '+' (43) 35
    ',' (44) 12 50
    '-' (45) 36 37
    '.' (46) 29 47
    '/' (47) 34
    ':' (58) 14 18 27 59
    ';' (59) 25 26 27 53 54
    '<' (60) 42
    '=' (61) 26 27
    '>' (62) 43
    '{' (123) 6 7 56
    '}' (125) 6 7 56
    error (256)
    CLASS (258) 7
    DEF (259) 17
    EXTENDS (260) 8
    IF (261) 20
    ELIF (262) 22
    ELSE (263) 23
    WHILE (264) 21
    RETURN (265) 53 54
    TYPECASE (266) 56
    ATLEAST (267) 40
    ATMOST (268) 41
    EQUALS (269) 39
    AND (270) 44
    OR (271) 45
    NOT (272) 46
    IDENT <str> (273) 28 60
    INT_LIT <num> (274) 32
    STRING_LIT <str> (275) 31
    NEG (276)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    pgm <node> (38)
        on left: 1
        on right: 0
    classes <classes> (39)
        on left: 2 3
        on right: 1 2
    statements <block> (40)
        on left: 4 5
        on right: 1 4 6 7
    statement_block <block> (41)
        on left: 6
        on right: 17 20 21 22 23 59
    clas <clas> (42)
        on left: 7
        on right: 2
    opt_cls_extends <ident> (43)
        on left: 8 9
        on right: 7
    formal_args <formals> (44)
        on left: 10 11
        on right: 7 17
    formal_args_delim <formals> (45)
        on left: 12 13
        on right: 10 12
    formal_arg <formal> (46)
        on left: 14
        on right: 12 13
    methods <methods> (47)
        on left: 15 16
        on right: 7 15
    method <method> (48)
        on left: 17
        on right: 15
    opt_return_ident <ident> (49)
        on left: 18 19
        on right: 17
    statement <statement> (50)
        on left: 20 21 25 26 27 53 54 55
        on right: 4
    opt_elif_parts <block> (51)
        on left: 22 23 24
        on right: 20 22
    l_expr <l_expr> (52)
        on left: 28 29
        on right: 26 27 30
    expr <expr> (53)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 52
        on right: 20 21 22 25 26 27 29 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 50 51 53 56
    actual_args <actuals> (54)
        on left: 48 49
        on right: 47 52
    actual_args_nonempty <actuals> (55)
        on left: 50 51
        on right: 49 50
    typecase <typecase> (56)
        on left: 56
        on right: 55
    type_alt_opt <type_alternatives> (57)
        on left: 57 58
        on right: 56 57
    type_alt <type_alternative> (58)
        on left: 59
        on right: 57
    ident <ident> (59)
        on left: 60
        on right: 7 8 14 17 18 27 29 47 52 59


State 0

    0 $accept: . pgm $end
    1 pgm: . classes statements
    2 classes: . classes clas
    3        | . %empty

    $default  reduce using rule 3 (classes)

    pgm      go to state 1
    classes  go to state 2


State 1

    0 $accept: pgm . $end

    $end  shift, and go to state 3


State 2

    1 pgm: classes . statements
    2 classes: classes . clas
    4 statements: . statements statement
    5           | . %empty  [$end, IF, WHILE, RETURN, TYPECASE, NOT, IDENT, INT_LIT, STRING_LIT, '-', '(']
    7 clas: . CLASS ident '(' formal_args ')' opt_cls_extends '{' statements methods '}'

    CLASS  shift, and go to state 4

    $default  reduce using rule 5 (statements)

    statements  go to state 5
    clas        go to state 6


State 3

    0 $accept: pgm $end .

    $default  accept


State 4

    7 clas: CLASS . ident '(' formal_args ')' opt_cls_extends '{' statements methods '}'
   60 ident: . IDENT

    IDENT  shift, and go to state 7

    ident  go to state 8


State 5

    1 pgm: classes statements .  [$end]
    4 statements: statements . statement
   20 statement: . IF expr statement_block opt_elif_parts
   21          | . WHILE expr statement_block
   25          | . expr ';'
   26          | . l_expr '=' expr ';'
   27          | . l_expr ':' ident '=' expr ';'
   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   53 statement: . RETURN expr ';'
   54          | . RETURN ';'
   55          | . typecase
   56 typecase: . TYPECASE expr '{' type_alt_opt '}'
   60 ident: . IDENT

    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    RETURN      shift, and go to state 11
    TYPECASE    shift, and go to state 12
    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    $default  reduce using rule 1 (pgm)

    statement  go to state 19
    l_expr     go to state 20
    expr       go to state 21
    typecase   go to state 22
    ident      go to state 23


State 6

    2 classes: classes clas .

    $default  reduce using rule 2 (classes)


State 7

   60 ident: IDENT .

    $default  reduce using rule 60 (ident)


State 8

    7 clas: CLASS ident . '(' formal_args ')' opt_cls_extends '{' statements methods '}'

    '('  shift, and go to state 24


State 9

   20 statement: IF . expr statement_block opt_elif_parts
   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 25
    expr    go to state 26
    ident   go to state 23


State 10

   21 statement: WHILE . expr statement_block
   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 25
    expr    go to state 27
    ident   go to state 23


State 11

   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   53 statement: RETURN . expr ';'
   54          | RETURN . ';'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    ';'         shift, and go to state 28

    l_expr  go to state 25
    expr    go to state 29
    ident   go to state 23


State 12

   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   56 typecase: TYPECASE . expr '{' type_alt_opt '}'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 25
    expr    go to state 30
    ident   go to state 23


State 13

   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   46     | NOT . expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 25
    expr    go to state 31
    ident   go to state 23


State 14

   28 l_expr: IDENT .  [ATLEAST, ATMOST, EQUALS, AND, OR, '>', '<', '+', '-', '*', '/', '.', '{', ')', ',', ':', ';', '=']
   60 ident: IDENT .  ['(']

    '('       reduce using rule 60 (ident)
    $default  reduce using rule 28 (l_expr)


State 15

   32 expr: INT_LIT .

    $default  reduce using rule 32 (expr)


State 16

   31 expr: STRING_LIT .

    $default  reduce using rule 31 (expr)


State 17

   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   37     | '-' . expr
   38     | . '(' expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 25
    expr    go to state 32
    ident   go to state 23


State 18

   28 l_expr: . IDENT
   29       | . expr '.' ident
   30 expr: . l_expr
   31     | . STRING_LIT
   32     | . INT_LIT
   33     | . expr '*' expr
   34     | . expr '/' expr
   35     | . expr '+' expr
   36     | . expr '-' expr
   37     | . '-' expr
   38     | . '(' expr ')'
   38     | '(' . expr ')'
   39     | . expr EQUALS expr
   40     | . expr ATLEAST expr
   41     | . expr ATMOST expr
   42     | . expr '<' expr
   43     | . expr '>' expr
   44     | . expr AND expr
   45     | . expr OR expr
   46     | . NOT expr
   47     | . expr '.' ident '(' actual_args ')'
   52     | . ident '(' actual_args ')'
   60 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 25
    expr    go to state 33
    ident   go to state 23


State 19

    4 statements: statements statement .

    $default  reduce using rule 4 (statements)


State 20

   26 statement: l_expr . '=' expr ';'
   27          | l_expr . ':' ident '=' expr ';'
   30 expr: l_expr .  [ATLEAST, ATMOST, EQUALS, AND, OR, '>', '<', '+', '-', '*', '/', '.', ';']

    ':'  shift, and go to state 34
    '='  shift, and go to state 35

    $default  reduce using rule 30 (expr)


State 21

   25 statement: expr . ';'
   29 l_expr: expr . '.' ident
   33 expr: expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   39     | expr . EQUALS expr
   40     | expr . ATLEAST expr
   41     | expr . ATMOST expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . AND expr
   45     | expr . OR expr
   47     | expr . '.' ident '(' actual_args ')'

    ATLEAST  shift, and go to state 36
    ATMOST   shift, and go to state 37
    EQUALS   shift, and go to state 38
    AND      shift, and go to state 39
    OR       shift, and go to state 40
    '>'      shift, and go to state 41
    '<'      shift, and go to state 42
    '+'      shift, and go to state 43
    '-'      shift, and go to state 44
    '*'      shift, and go to state 45
    '/'      shift, and go to state 46
    '.'      shift, and go to state 47
    ';'      shift, and go to state 48


State 22

   55 statement: typecase .

    $default  reduce using rule 55 (statement)


State 23

   52 expr: ident . '(' actual_args ')'

    '('  shift, and go to state 49


State 24

    7 clas: CLASS ident '(' . formal_args ')' opt_cls_extends '{' statements methods '}'
   10 formal_args: . formal_args_delim
   11            | . %empty  [')']
   12 formal_args_delim: . formal_args_delim ',' formal_arg
   13                  | . formal_arg
   14 formal_arg: . ident ':' ident
   60 ident: . IDENT

    IDENT  shift, and go to state 7

    $default  reduce using rule 11 (formal_args)

    formal_args        go to state 50
    formal_args_delim  go to state 51
    formal_arg         go to state 52
    ident              go to state 53


State 25

   30 expr: l_expr .

    $default  reduce using rule 30 (expr)


State 26

    6 statement_block: . '{' statements '}'
   20 statement: IF expr . statement_block opt_elif_parts
   29 l_expr: expr . '.' ident
   33 expr: expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   39     | expr . EQUALS expr
   40     | expr . ATLEAST expr
   41     | expr . ATMOST expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . AND expr
   45     | expr . OR expr
   47     | expr . '.' ident '(' actual_args ')'

    ATLEAST  shift, and go to state 36
    ATMOST   shift, and go to state 37
    EQUALS   shift, and go to state 38
    AND      shift, and go to state 39
    OR       shift, and go to state 40
    '>'      shift, and go to state 41
    '<'      shift, and go to state 42
    '+'      shift, and go to state 43
    '-'      shift, and go to state 44
    '*'      shift, and go to state 45
    '/'      shift, and go to state 46
    '.'      shift, and go to state 47
    '{'      shift, and go to state 54

    statement_block  go to state 55


State 27

    6 statement_block: . '{' statements '}'
   21 statement: WHILE expr . statement_block
   29 l_expr: expr . '.' ident
   33 expr: expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   39     | expr . EQUALS expr
   40     | expr . ATLEAST expr
   41     | expr . ATMOST expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . AND expr
   45     | expr . OR expr
   47     | expr . '.' ident '(' actual_args ')'

    ATLEAST  shift, and go to state 36
    ATMOST   shift, and go to state 37
    EQUALS   shift, and go to state 38
    AND      shift, and go to state 39
    OR       shift, and go to state 40
    '>'      shift, and go to state 41
    '<'      shift, and go to state 42
    '+'      shift, and go to state 43
    '-'      shift, and go to state 44
    '*'      shift, and go to state 45
    '/'      shift, and go to state 46
    '.'      shift, and go to state 47
    '{'      shift, and go to state 54

    statement_block  go to state 56


State 28

   54 statement: RETURN ';' .

    $default  reduce using rule 54 (statement)


State 29

   29 l_expr: expr . '.' ident
   33 expr: expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   39     | expr . EQUALS expr
   40     | expr . ATLEAST expr
   41     | expr . ATMOST expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . AND expr
   45     | expr . OR expr
   47     | expr . '.' ident '(' actual_args ')'
   53 statement: RETURN expr . ';'

    ATLEAST  shift, and go to state 36
    ATMOST   shift, and go to state 37
    EQUALS   shift, and go to state 38
    AND      shift, and go to state 39
    OR       shift, and go to state 40
    '>'      shift, and go to state 41
    '<'      shift, and go to state 42
    '+'      shift, and go to state 43
    '-'      shift, and go to state 44
    '*'      shift, and go to state 45
    '/'      shift, and go to state 46
    '.'      shift, and go to state 47
    ';'      shift, and go to state 57


State 30

   29 l_expr: expr . '.' ident
   33 expr: expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   39     | expr . EQUALS expr
   40     | expr . ATLEAST expr
   41     | expr . ATMOST expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . AND expr
   45     | expr . OR expr
   47     | expr . '.' ident '(' actual_args ')'
   56 typecase: TYPECASE expr . '{' type_alt_opt '}'

    ATLEAST  shift, and go to state 36
    ATMOST   shift, and go to state 37
    EQUALS   shift, and go to state 38
    AND      shift, and go to state 39
    OR       shift, and go to state 40
    '>'      shift, and go to state 41
    '<'      shift, and go to state 42
    '+'      shift, and go to state 43
    '-'      shift, and go to state 44
    '*'      shift, and go to state 45
    '/'      shift, and go to state 46
    '.'      shift, and go to state 47
    '{'      shift, and go to state 58


State 31

   29 l_expr: expr . '.' ident
   33 expr: expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   39     | expr . EQUALS expr
   40     | expr . ATLEAST expr
   41     | expr . ATMOST expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | NOT expr .  [AND, OR, '{', ')', ',', ';']
   47     | expr . '.' ident '(' actual_args ')'
